--- a/CSS/Main.css
+++ b/CSS/Main.css
@@ -67,8 +67,15 @@ height: 30px !important;
     transition: background-color 200ms ease !important;
 }
 
+#mySelect{
+ 
+  background-color: rgba(245, 245, 245, 0.737) !important;
 
-.form-select option {
+  margin-left: 2px;
+  margin-top: 5px;
+}
+#mySelect option {
+  
   font-size: 12px !important;         /* خيارات أصغر */
   padding: 2px 4px !;
   border-radius: 20px !important;
@@ -77,10 +84,7 @@ height: 30px !important;
 
 
 
-.form-select:hover{
-  background-color: whitesmoke !important;
 
-}
 
 
 
